--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build":"cd ../client && npm install && npm run build",
+    "start":"npm run build && (npm install && node index.js)",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
