--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build":"cd ../client && npm install && npm run build",
-    "start":"npm run build && (npm install && node index.js)",
+    "build":"(cd ../client && npm install && npm run build) && npm install",
+    "start":"node index.js",
     "dev": "nodemon index.js"
   },
   "keywords": [],
