--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build":"(cd ../client && npm install && npm run build) && npm install",
-    "start":"node index.js",
+    "client": "cd ../client && npm install && npm run build",
+    "build": "npm run client && npm install",
+    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "keywords": [],
